# req_checker

./: .gitignore  README.md  pyproject.toml  report.md
.streamlit/: config.toml
src/req_checker/: crew.py  main.py  st_app.py
src/req_checker/config/: agents.yaml  tasks.yaml
tests/: st_mini.py  st_pandoc.py  st_rag.py  st_storefile.py  temp.json
