[project]
name = "req_checker"
version = "0.1.0"
description = "req-checker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "streamlit>=1.45.1",
]

[project.scripts]
req_checker = "req_checker.main:run"
run_crew = "req_checker.main:run"
train = "req_checker.main:train"
replay = "req_checker.main:replay"
test = "req_checker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
